--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,19 +15,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: './fraud-detection-frontend/package-lock.json'
+
       - name: Install and Build
+        working-directory: ./fraud-detection-frontend
         run: |
           npm install
           npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist' 
+          path: './fraud-detection-frontend/dist' 
+
       - name: Deploy
         uses: actions/deploy-pages@v4
